# log4rs-syslog

./: .rustfmt.toml  .travis.yml  Cargo.toml  README.md  rustfmt  travis-script
examples/: from_conf.rs  manually.rs  reconfigure.rs
src/: file.rs  lib.rs  syslog.rs
tests/: skeptic.rs
