[package]
name = "log4rs-syslog"
description = "Syslog appender for log4rs based on libc's syslog() function (*nix only)"
version = "3.0.1"
authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["logger", "log", "logging", "nix", "syslog"]
categories = ["os::unix-apis"]
publish = true
repository = "https://github.com/im-0/log4rs-syslog"
documentation = "https://docs.rs/crate/log4rs-syslog"
readme = "README.md"

[badges]
travis-ci = { repository = "im-0/log4rs-syslog", branch = "b3.0.0" }

[features]
default = ["file"]
file = ["log4rs/file", "log/serde", "serde", "serde_derive"]
unstable = []

[dependencies]
bitflags = { version = "1.0", default_features = false }
lazy_static = { version = "1.0", default_features = false }
libc = { version = "0.2", default_features = false }
log = { version = "0.4", default_features = false }
log4rs = { version = "0.8", default_features = false }
serde = { version = "1.0", default_features = false, optional = true }
serde_derive = { version = "1.0", default_features = false, optional = true }

[dev-dependencies]
glob = "0.2"
log4rs = "0.8"
tempfile = "3.0"
which = "2.0"
