[package]
name = "log4rs-syslog"
description = "Syslog appender for log4rs based on libc's syslog() function (*nix only)"
version = "3.0.3"
authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["logger", "log", "logging", "nix", "syslog"]
categories = ["os::unix-apis"]
publish = true
repository = "https://github.com/im-0/log4rs-syslog"
documentation = "https://docs.rs/crate/log4rs-syslog"
readme = "README.md"

[badges]
travis-ci = { repository = "im-0/log4rs-syslog", branch = "b3.0.0" }

[features]
default = ["config_parsing"]
config_parsing = ["log4rs/config_parsing", "log/serde", "serde", "serde_derive"]
unstable = []

[dependencies]
anyhow = "1.0"
bitflags = { version = "1.0", default_features = false }
lazy_static = { version = "1.0", default_features = false }
libc = { version = "0.2", default_features = false }
log = { version = "0.4", default_features = false }
log4rs = { version = "1.0.0-alpha-2", default_features = false, features = ["pattern_encoder"] }
serde = { version = "1.0", default_features = false, optional = true }
serde_derive = { version = "1.0", default_features = false, optional = true }

[dev-dependencies]
glob = { version = "0.2", default_features = false }
tempfile = { version = "3.0", default_features = false }
which = { version = "2.0", default_features = false }
